css/hitler.css
/* ... */
@media only screen and (min-width: 700px) {
    :root {
        --base-unit: 13px;
        --card-width: 60px;
        --card-height: 90px;
    }
}


div {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    padding: 0;
    margin: 0;
    position: relative;
}


/* BOARD */


body {
    background-color: white;
    padding: 0;
    margin: 0;
    height: 100vh;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    background-color: var(--color-back);
    text-transform: uppercase;
    font-weight: bold;
    font-family: serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: auto;
    transition: 0.2s ease-in-out;
}


body.fascists-won {
    background-color: var(--color-fascist);
}

body.liberals-won {
    background-color: var(--color-liberal);
}


.board {
    width: 100%;
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: calc(20*var(--base-unit));
    margin: calc(2*var(--base-unit)) 0;
}

.middle {
    width: 70%;
    height: 100%;
    border: solid gray 2px;
    background-color: var(--color-middle);
    /* background-color: var(--color-liberal); */
    border-radius: 5px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    -webkit-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.75);
}

.middle.fascists-won {
    background-color: var(--color-fascist);
}

.middle.liberals-won {
    background-color: var(--color-liberal);
}


.policy-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 90%;
    height: 30%;
}

.policy {
    margin: 0 calc(0.5*var(--base-unit));
    border: solid black 1px;
    width: var(--card-width);
    height: var(--card-height);
    border-radius: 3px;
    box-shadow: black;
    background-size: 60% 60%;
    background-repeat: no-repeat;
    background-position: center;
    transition: 0.1s ease-in-out;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.policy.flash {
    transform: scale(1.2);
}

.policy.clickable:hover {
    transform: scale(1.2);
    cursor: pointer;
}

.policy.clickable:active {
    transform: scale(1.1);
}

@media (pointer:coarse) {
    .policy.clickable:active{
        transform: scale(0.9);
    }
}


.policy.trigger-select {
    background-image: url("../images/svg/icon-hat.svg");
}

.policy.trigger-investigate {
    background-image: url("../images/svg/icon-search.svg");
}

.policy.trigger-execute {
    background-image: url("../images/svg/icon-gun.svg");
}

.policy.trigger-peak {
    background-size: 60% 45%;
    background-image: url("../images/png/icon-peak.png");
}

.policy.trigger-veto::before {
    content: "veto \000d enabled";
    font-size: calc(0.5*var(--base-unit));
    text-align: center;
    position: absolute;
    width: 80%;
    bottom: calc(0.5*var(--base-unit));;
}


.policy.empty {
    border: none;
    background-color: var(--color-back);
}


.policy-row.liberal .policy:last-child{
    background-image: url("../images/svg/icon-dove.svg");
}

.policy-row.fascist .policy:last-child{
    background-image: url("../images/svg/icon-skull.svg");
}

.policy.fascist, .policy.liberal {
    -webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
}

.policy.liberal {
    background-color: var(--color-liberal);
}

.policy.fascist {
    background-color: var(--color-fascist);
}

.election-tracker {
    height: calc(2*var(--base-unit));
    width:  30%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

.election-tracker::before {
    content: "";
    width: 60%;
    border: none;
    height: 20%;
    position: absolute;
    background-color: var(--color-back);
}

.tracker-place {
    border: none;
    height: calc(1.5*var(--base-unit));
    width:  calc(1.5*var(--base-unit));
    border-radius: 50px;
    background-color: var(--color-back);
}

.tracker-place.tracker {
    background-color: black;
    -webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
}

.pile {
    display: flex;
    width: var(--card-width);
    height: var(--card-height);
    flex-direction: column;
    justify-content: center;
    padding-bottom: calc(1.1*var(--base-unit));
    background-color: var(--color-discard);
    -webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
    box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.75);
}

.pile .pile-size {
    text-align: center;
    width: 100%;
    font-size: calc(2.3*var(--base-unit));
}

.pile .pile-size:after{
    content: "DISCARD";
    font-weight: bold;
    width: 100%;
    font-size: calc(0.7*var(--base-unit));
    position: absolute;
    bottom: calc(-0.9*var(--base-unit));
    left: 0;
    text-align: center;
}

.pile.draw .pile-size:after{
    content: "DRAW";
}

.pile.draw {
    background-color: var(--color-draw);
    transition: 0.1s ease-in-out;
}

/* TODO: Add clickable */
.pile.clickable.draw:hover  {
    transform: scale(1.2);
    cursor: pointer;
}

.pile.clickable.draw:before, .pile.clickable.draw:after {
    opacity: 0;
    border: solid green 2px;
    content: "";
    position: absolute;
    background-color: var(--color-draw);
    border: solid black 1px;
    border-radius: 3px;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: 0.1s ease-in-out;
}

.pile.clickable.draw:hover:before {
    opacity: 1;
    transform: translate(3px, 3px);
    transition: 0.1s ease-in-out;
}
/* ... */

